--- a/babovka.html
+++ b/babovka.html
@@ -47,51 +47,33 @@
             <h1>Bábovka</h1>
             <img src="./res/img/Bábovka.jpg" alt="Bábovka" class="recipe-image">
             <h2>Suroviny</h2>
-            <ul>
+            <ul class="decoration">
                 <li>1 a půl hrnku polohrubé mouky</li>
                 <li>1 hrnek cukru krystal</li>
                 <li>2 vejce velikosti L</li>
                 <li>1 prášek do pečiva</li>
                 <li>1 vanilkový cukr</li>
-                <li>půl hrnku mléka</li>
-                <li>půl hrnku slunečnicového oleje</li>
+                <li>1/2 mléka</li>
+                <li>1/2 slunečnicového oleje</li>
                 <li>rozinky</li>
                 <li>rum</li>
                 <li>kakao</li>
             </ul>
 
             <h2>Postup</h2>
-            <ol>
+            <ol class="decoration">
                 <li>Smícháme sypké suroviny s výjimkou kakaa a promícháme.</li>
                 <li>Přidáme vejce, olej a mléko a promícháme.</li>
                 <li>Přidáme rozinky a rum a zamícháme je.</li>
                 <li>Formu vymažeme olejem a vysypeme moukou (hrubou).</li>
                 <li>Nalejeme polovinu těsta.</li>
                 <li>Do druhé poloviny přidáme kakao a přilejeme do formy.</li>
+                <li>Nastavíme troubu na 170 - 180° a pečeme 45 minut (podle velikosti bábovky a typu trouby)</li>
             </ol>
         </section>
     </main>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section about">
-                <h2>O nás</h2>
-                <p>Jsme nadšenci do vaření a pečení, kteří chtějí sdílet své oblíbené recepty se světem.</p>
-            </div>
-            <div class="footer-section links">
-                <h2>Užitečné odkazy</h2>
-                <ul>
-                    <li><a href="#">Domů</a></li>
-                    <li><a href="#">Sladké Recepty</a></li>
-                    <li><a href="#">Slané Recepty</a></li>
-                </ul>
-            </div>
-            <div class="footer-section contact">
-                <h2>Kontakt</h2>
-                <p>Email: info@recepty.cz</p>
-                <p>Telefon: +420 123 456 789</p>
-            </div>
-        </div>
         <div class="footer-bottom">
             &copy; 2024 Recepty.cz | Všechna práva vyhrazena
         </div>
