--- a/babovka.html
+++ b/babovka.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bábovka</title>
     <link rel="stylesheet" href="./res/css/menu.css">
-    <link rel="stylesheet" href="./res/css/babovka.css">
+    <link rel="stylesheet" href="./res/css/recept.css">
     <link rel="stylesheet" href="./res/css/footer.css">
     <link rel="shortcut icon" href="./res/img/Bábovka.jpg" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">Recepty</div>
+            <div class="logo"><a href="index.html">Recepty</a></div>
             <div class="menu-toggle" id="menu-toggle">
                 <div class="bar"></div>
                 <div class="bar"></div>
@@ -24,10 +24,11 @@
                 <li class="dropdown">
                     <a href="#">Sladké Recepty &#9662;</a>
                     <ul class="dropdown-content">
+                        <li><a class="active" href="babovka.html">Bábovka</a></li>
                         <li><a href="#">Čokoládové dezerty</a></li>
+                        <li><a href="jablecny-strudl.html">Jablečný štrůdl</a></li>
+                        
                         <li><a href="#">Ovocné koláče</a></li>
-                        <li><a href="#">Zmrzliny</a></li>
-                        <li><a href="babovka.html">Bábovka</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -38,6 +39,14 @@
                         <li><a href="#">Polévky</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#">Pomazánky &#9662;</a>
+                    <ul class="dropdown-content">
+                        <li><a href="hermelinova-pomazanka.html">Hermelínová pomazánka</a></li>
+                        <li><a href="nivova-pomazanka.html">Nivová pomazánka</a></li>
+                        <li><a href="pastikova-pomazanka.html">Paštiková pomazánka</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
@@ -46,6 +55,13 @@
         <section class="recipe-detail">
             <h1>Bábovka</h1>
             <img src="./res/img/Bábovka.jpg" alt="Bábovka" class="recipe-image">
+            <h2>Věci</h2>
+                <ul class="decoration">
+                    <li>Miska</li>
+                    <li>Forma na bábovku</li>
+                    <li>Štětka</li>
+                </ul>
+            
             <h2>Suroviny</h2>
             <ul class="decoration">
                 <li>1 a půl hrnku polohrubé mouky</li>
