--- a/babovka.html
+++ b/babovka.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bábovka</title>
     <link rel="stylesheet" href="./res/css/menu.css">
     <link rel="stylesheet" href="./res/css/recept.css">
     <link rel="stylesheet" href="./res/css/footer.css">
     <link rel="shortcut icon" href="./res/img/Bábovka.jpg" type="image/x-icon">
+    <title>Bábovka</title>
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
                     <a href="#">Sladké Recepty &#9662;</a>
                     <ul class="dropdown-content">
                         <li><a class="active" href="babovka.html">Bábovka</a></li>
-                        <li><a href="#">Čokoládové dezerty</a></li>
+                        <li><a href="dort.html">Dort</a></li>
                         <li><a href="jablecny-strudl.html">Jablečný štrůdl</a></li>
                         
                         <li><a href="#">Ovocné koláče</a></li>
