--- a/dort.html
+++ b/dort.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./res/css/menu.css">
     <link rel="stylesheet" href="./res/css/recept.css">
     <link rel="stylesheet" href="./res/css/footer.css">
-    <link rel="shortcut icon" href="./res/img/Nivová.jpg" type="image/x-icon">
-    <title>Nivová pomazánka</title>
+    <link rel="shortcut icon" href="./res/img/Dort.jpg" type="image/x-icon">
+    <title>Dort</title>
 </head>
 <body>
     <header>
@@ -24,9 +24,10 @@
                 <li class="dropdown">
                     <a href="#">Sladké Recepty &#9662;</a>
                     <ul class="dropdown-content">
-                        <li><a href="babovka.html">Bábovka</a></li>
+                        <li><a class="active" href="babovka.html">Bábovka</a></li>
                         <li><a href="dort.html">Dort</a></li>
                         <li><a href="jablecny-strudl.html">Jablečný štrůdl</a></li>
+                        
                         <li><a href="#">Ovocné koláče</a></li>
                     </ul>
                 </li>
@@ -42,7 +43,7 @@
                     <a href="#">Pomazánky &#9662;</a>
                     <ul class="dropdown-content">
                         <li><a href="hermelinova-pomazanka.html">Hermelínová pomazánka</a></li>
-                        <li><a class="active" href="nivova-pomazanka.html">Nivová pomazánka</a></li>
+                        <li><a href="nivova-pomazanka.html">Nivová pomazánka</a></li>
                         <li><a href="pastikova-pomazanka.html">Paštiková pomazánka</a></li>
                     </ul>
                 </li>
@@ -52,34 +53,38 @@
 
     <main>
         <section class="recipe-detail">
-            <h1>Nivová pomazánka</h1>
-            <img src="./res/img/Nivová.jpg" alt="Nivová pomazánka" class="recipe-image">
+            <h1>Dort</h1>
+            <img src="./res/img/Dort.jpg" alt="Dort" class="recipe-image">
             <h2>Věci</h2>
-            <ul class="decoration">
-                <li>Miska</li>
-                <li>Kráječ na vejce</li>
-                <li>Mixér (malý)</li>
-                <li>Vidlička (na promíchání)</li>
-            </ul>
+                <ul class="decoration">
+                    <li>Miska</li>
+                    <li>Forma na bábovku</li>
+                    <li>Štětka</li>
+                </ul>
+            
             <h2>Suroviny</h2>
             <ul class="decoration">
-                <li>1x niva</li>
-                <li>180g lučiny</li>
-                <li>1 vejce velikosti L</li>
-                <li>pepř (podle chuti)</li>
+                <li>1 a půl hrnku polohrubé mouky</li>
+                <li>1 hrnek cukru krystal</li>
+                <li>2 vejce velikosti L</li>
+                <li>1 prášek do pečiva</li>
+                <li>1 vanilkový cukr</li>
+                <li>1/2 mléka</li>
+                <li>1/2 slunečnicového oleje</li>
+                <li>rozinky</li>
+                <li>rum</li>
+                <li>kakao</li>
             </ul>
 
             <h2>Postup</h2>
             <ol class="decoration">
-                <li>Necháme vařit vajíčka a až začne vřít voda nastavíme 10 minut</li>
-                <li>Do misky dáme lučinu</li>
-                <li>Nakrájíme nivu na kostičku a rozdrtíme</li>
-                <li>Promícháme lučinu s nivou</li>
-                <li>Ochladíme a oloupeme vejce</li>
-                <li>Vezmeme si kráječ na vejce</li>
-                <li>Z vajce uděláme malé čtverečky</li>
-                <li>Opatrně promícháme</li>
-                <li>Ochutnáme a případně dochutíme pepřem (můžeme přidat čerstvé bylinky např: pažitka, petrželová nať, mladá cibulka...)</li>
+                <li>Smícháme sypké suroviny s výjimkou kakaa a promícháme.</li>
+                <li>Přidáme vejce, olej a mléko a promícháme.</li>
+                <li>Přidáme rozinky a rum a zamícháme je.</li>
+                <li>Formu vymažeme olejem a vysypeme moukou (hrubou).</li>
+                <li>Nalejeme polovinu těsta.</li>
+                <li>Do druhé poloviny přidáme kakao a přilejeme do formy.</li>
+                <li>Nastavíme troubu na 170 - 180° a pečeme 45 minut (podle velikosti bábovky a typu trouby)</li>
             </ol>
         </section>
     </main>
