--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recepty</title>
     <link rel="stylesheet" href="./res/css/menu.css">
     <link rel="stylesheet" href="./res/css/index.css">
     <link rel="stylesheet" href="./res/css/footer.css">
+    <title>Recepty</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
                     <a href="#">Sladké Recepty &#9662;</a>
                     <ul class="dropdown-content">
                         <li><a href="babovka.html">Bábovka</a></li>
-                        <li><a href="#">Čokoládové dezerty</a></li>
+                        <li><a href="dort.html">Dort</a></li>
                         <li><a href="jablecny-strudl.html">Jablečný štrůdl</a></li>
                         <li><a href="#">Ovocné koláče</a></li>
                     </ul>
@@ -57,8 +57,8 @@
 
         <section class="recipes">
             <h2>Naše oblíbené recepty</h2>
-            <a href="cokoladovy-dort.html" class="recipe-card">
-                <h3>Čokoládový dort</h3>
+            <a href="dort.html" class="recipe-card">
+                <h3>Dort</h3>
                 <p>Sladký a lahodný čokoládový dort pro každou příležitost.</p>
             </a>
             <a href="spenatovy-quiche.html" class="recipe-card">
