--- a/jablecny-strudl.html
+++ b/jablecny-strudl.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="./res/css/menu.css">
     <link rel="stylesheet" href="./res/css/recept.css">
     <link rel="stylesheet" href="./res/css/footer.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="./res/img/Štrůdl.jpg" type="image/x-icon">
+    <title>Jablečný štrůdl</title>
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
                     <a href="#">Sladké Recepty &#9662;</a>
                     <ul class="dropdown-content">
                         <li><a href="babovka.html">Bábovka</a></li>
-                        <li><a href="#">Čokoládové dezerty</a></li>
+                        <li><a href="dort.html">Dort</a></li>
                         <li><a class="active" href="jablecny-strudl.html">Jablečný štrůdl</a></li>
                         <li><a href="#">Ovocné koláče</a></li>
                     </ul>
@@ -53,29 +54,44 @@
         <section class="recipe-detail">
             <h1>Jablečný štrůdl</h1>
             <img src="./res/img/Štrůdl.jpg" alt="Jablečný štrůdl" class="recipe-image">
+            <h2>Věci</h2>
+            <ul class="decoration">
+                <li>Plech + pečící papír</li>
+                <li>Mísa na těsto</li>
+                <li>Váleček</li>
+                <li>Štětečka</li>
+                <li>Hrníček na rozšlehané vejce</li>
+            </ul>
             <h2>Suroviny</h2>
             <ul class="decoration">
-                <li>1 a půl hrnku polohrubé mouky</li>
-                <li>1 hrnek cukru krystal</li>
-                <li>2 vejce velikosti L</li>
-                <li>1 prášek do pečiva</li>
-                <li>1 vanilkový cukr</li>
+                <li>1/4 kila hladké mouky</li>
+                <li>8 dkg tuku (hera, enbo máslo)</li>
+                <li>1 vejce velikosti L</li>
+                <li>5 lžic teplého mléka</li>
+                <li>2 lžíce octa</li>
                 <li>1/2 mléka</li>
-                <li>1/2 slunečnicového oleje</li>
-                <li>rozinky</li>
-                <li>rum</li>
-                <li>kakao</li>
+            </ul>
+
+            <h2>Náplň</h2>
+            <ul class="decoration">
+                <li>6 středně velkých nastrouhaných jablek</li>
+                <li>Rozinky</li>
+                <li>Cukr (dle kyselosti jablek)</li>
+                <li>Mletá skořice</li>
+                <li>Nasekané vlašské ořechy</li>
             </ul>
 
             <h2>Postup</h2>
             <ol class="decoration">
-                <li>Smícháme sypké suroviny s výjimkou kakaa a promícháme.</li>
-                <li>Přidáme vejce, olej a mléko a promícháme.</li>
-                <li>Přidáme rozinky a rum a zamícháme je.</li>
-                <li>Formu vymažeme olejem a vysypeme moukou (hrubou).</li>
-                <li>Nalejeme polovinu těsta.</li>
-                <li>Do druhé poloviny přidáme kakao a přilejeme do formy.</li>
-                <li>Nastavíme troubu na 170 - 180° a pečeme 45 minut (podle velikosti bábovky a typu trouby)</li>
+                <li>Do hlubší mísy odvážíme mouku</li>
+                <li>Přidáme vejce, teplé mléko, rozpuštěný tuk a ocet</li>
+                <li>Promícháme nejprve příborovým nožem a poté ručně promačkáme na hladké těsto</li>
+                <li>Rozdělíme na 2 nebo 3 části a vyválíme na tenký obdélník (nezapomeneme podsypat těsto polohrubou moukou)</li>
+                <li>Poklademe náplní z jablek</li>
+                <li>Potřeme rozšlehaným vejcem</li>
+                <li>Zamotáme a potřeme</li>
+                <li>Troubu nastavíme na 175°</li>
+                <li>Po 10 minutách potřeme vajíčkem a dopékáme 15 minut</li>
             </ol>
         </section>
     </main>
