--- a/pastikova-pomazanka.html
+++ b/pastikova-pomazanka.html
@@ -24,10 +24,10 @@
                 <li class="dropdown">
                     <a href="#">Sladké Recepty &#9662;</a>
                     <ul class="dropdown-content">
-                        <li><a href="#">Čokoládové dezerty</a></li>
-                        <li><a href="#">Ovocné koláče</a></li>
-                        <li><a href="jablecny-strudl.html">Jablečný štrůdl</a></li>
                         <li><a href="babovka.html">Bábovka</a></li>
+                        <li><a href="dort.html">Dort</a></li>
+                        <li><a href="jablecny-strudl.html">Jablečný štrůdl</a></li>
+                        <li><a href="#">Ovocné koláče</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
@@ -64,7 +64,7 @@
             <h2>Suroviny</h2>
             <ul class="decoration">
                 <li>1x paštika májka</li>
-                <li>180g lučinu</li>
+                <li>180g lučiny</li>
                 <li>2 vejce velikosti L</li>
                 <li>pepř (podle chuti)</li>
             </ul>
@@ -79,7 +79,7 @@
                 <li>Vezmeme si kráječ na vejce</li>
                 <li>Z vajec uděláme malé čtverečky</li>
                 <li>Opatrně promícháme</li>
-                <li>Ochutnáme a kdyžtak doplníme pepřem</li>
+                <li>Ochutnáme a případně dochutíme pepřem (můžeme přidat čerstvé bylinky např: pažitka, petrželová nať, mladá cibulka...)</li>
             </ol>
         </section>
     </main>
